docs: [sqldelight, kotlin, kotlin, ktor, kmp] Sync and translate upstream documentation